--- a/wk10/part1.1.html
+++ b/wk10/part1.1.html
@@ -28,6 +28,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <a> href= part2.2</a>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Part 1.1</a></li>
                         <li class="nav-item"><a class="nav-link" href="part1.2.html">Part 1.2</a></li>
                         <li class="nav-item"><a class="nav-link" href="part1.3.html">Part 1.3</a></li>
@@ -43,11 +44,11 @@
                     <p class="lead">This is Part 1.1</p>
                 </div>
                 <div class="col-lg-2 order-1 mb-3 d-flex flex-column gap-2 mx-auto align-items-stretch">
-                    <button name="1.1.1" class="btn btn-success btn-block" data-sql="SELECT * "FROM" employees LIMIT 100" onClick="reply_click(this)">1.1</button>
-                    <button name="1.1.2" class="btn btn-success btn-block">1.2</button>
-                    <button name="1.1.3" class="btn btn-success btn-block">1.3</button>
-                    <button name="1.1.4" class="btn btn-success btn-block">1.4</button>
-                    <button name="1.1.5" class="btn btn-success btn-block">1.5</button>
+                    <button name="1.1.1" class="btn btn-success btn-block" data-sql="SELECT * FROM employees LIMIT 100" onClick="reply_click(this)">Departments</button>
+                    <button name="1.1.2" class="btn btn-success btn-block" data-sql="SELECT emp_id, first_name, last_name FROM employees LIMIT 100" onClick="reply_click(this)">Employee ID</button>
+                    <button name="1.1.3" class="btn btn-success btn-block" data-sql="SELECT * FROM Departments LIMIT 100" onClick="reply_click(this)">Titles</button>
+                    <button name="1.1.4" class="btn btn-success btn-block"data-sql="SELECT DISTINCT title  FROM titles ORDER BY title ASC LIMIT 100" onClick="reply_click(this)">unique job titles</button>
+                    <button name="1.1.5" class="btn btn-success btn-block"data-sql="SELECT first_name, last_name FROM employees ORDER BY last_name ASC LIMIT 100" onClick="reply_click(this)">employees names</button>
                 </div>
                 <div class="col-lg-10 order-2 border-success">
                     <textarea id="commands" class="mb-5">TEXT
